# subgraph

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release-windows.yml
examples/: basic_pipeline.py  generate_sample.py
scripts/: build-windows-exe.sh
src/subgraph/: __init__.py  __main__.py  cli.py  graph.py  loader.py  sources.py
tests/: test_bad_data.py  test_graph.py  test_sources.py
tests/data/: sample.json  sample.ndjson
