[project]
name = "subgraph"
version = "0.1.0"
description = "Transitive-closure subgraph extraction from typed node graphs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
subgraph = "subgraph.cli:main"

[build-system]
requires = ["uv_build>=0.5,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.9",
    "ty>=0.0.1a0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
